[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polvon"
version = "0.1"
description = "CLI tool for managing Linux systemd services, apps, and automations"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Sayfulla Mirkhalikov"}
]
keywords = ["systemd", "cli", "tui", "service-manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
]

[project.scripts]
polvon = "polvon.main:main"

[project.urls]
Homepage = "https://github.com/thesayfulla/polvon"
Repository = "https://github.com/thesayfulla/polvon"
